--- a/index.html
+++ b/index.html
@@ -18,7 +18,39 @@
         }
     </style>
 </head>
-<body>
+<<nav>
+    <ul>
+        <li><a href="index.html">首頁</a></li>
+        <li><a href="about.html">關於我</a></li>
+        <li><a href="experience.html">經歷與技能</a></li>
+        <li><a href="projects.html">專案作品</a></li>
+        <li><a href="contact.html">聯絡方式</a></li>
+    </ul>
+</nav>
+<style>
+    nav {
+        background-color: #333;
+        padding: 10px;
+        text-align: center;
+    }
+    ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    li {
+        display: inline;
+        margin: 0 15px;
+    }
+    a {
+        color: white;
+        text-decoration: none;
+        font-size: 18px;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+</style>
+>
     <h1>歡迎來到我的履歷網站</h1>
     <p>即將展示：自我介紹、工作經歷、技能、專案作品、聯絡方式、自傳</p>
 </body>
